tests/negative/comptime_break_without_loop.ora
contract ComptimeBreakWithoutLoop {
    pub fn run() -> u256 {
        comptime {
            break;
        }
        return 1;
    }
}
